[tool.poetry]
name = "Kaggle competition"
version = "0.0.1"
description = "Kaggle competition: Two Sigma Connect: Rental Listing Inquiries"
authors = ["Sergei Kolesnik <kolesniksn2510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.4.1"
numpy = "^1.22.2"
sklearn = "^0.0"
mordecai = "^2.1.0"
geopy = "^2.2.0"
catboost = "^1.0.4"
ipywidgets = "^7.6.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
